--- a/_posts/notes/2014-06-07-new-blog.md
+++ b/_posts/notes/2014-06-07-new-blog.md
@@ -1,18 +1,47 @@
 ---
 layout:	default
 title:  这是我的新博客
-category: blog
-tags: github Jekyll
 ---
 
-#这是我的新博客
+## 为什么写博客
 
-##为什么来到GitHub
+## 为什么来到GitHub
 
-##How To
+## How To
 
-###域名
+### github
+### 域名
 
-我没有使用独立域名
+我没有使用独立域名，原来的博客[allen2660.com](http://www.allen2660.com)还不能快速迁移出来，知识点还需要梳理。再加上这个站点还不完善，我还有很多坑需要踩。
 
-###Jekyll
+
+
+### Jekyll
+
+## 我的目前设置
+
+目录结构如下：
+
+	allen2660.github.io
+	.
+	├── README.md
+	├── _config.yml
+	├── _layouts
+	│   ├── default.html
+	│   └── post.html
+	├── _posts
+	│   └── notes
+	│       └── 2014-06-07-new-blog.md
+	├── index.md
+	└── notes
+	    └── index.md
+
+主页就使用主目录下的index.md，这边主要记录一些技术上的文章。
+而一些笔记等等，以notes目录作为入口，里面也有一个index.md。
+
+而文章都放在_post 下面，以Jekyll认识的格式来组织。
+
+## 参考文章
+
++ 阮一峰 [《搭建一个免费的，无限流量的Blog----github Pages和Jekyll入门》](http://www.ruanyifeng.com/blog/2012/08/blogging_with_jekyll.html)
++ BeiYuu [使用Github Pages建独立博客](http://beiyuu.com/github-pages/)
