--- a/_posts/notes/2014-06-07-new-blog.md
+++ b/_posts/notes/2014-06-07-new-blog.md
@@ -5,6 +5,12 @@ title:  这是我的新博客
 
 ## 为什么写博客
 
+关于为什么写博客的文章，读过好几篇了，下面几篇都写得很好：
+
++ [我为什么写博客](http://www.cnblogs.com/bangerlee/archive/2011/09/11/2173632.html)
++ [BeiYuu-我为什么写博客？]()
++ [[BetterExplained]为什么你应该（从现在开始就）写博客](http://mindhacks.cn/2009/02/15/why-you-should-start-blogging-now/)
+
 ## 为什么来到GitHub
 
 ## How To
@@ -12,7 +18,7 @@ title:  这是我的新博客
 ### github
 ### 域名
 
-我没有使用独立域名，原来的博客[allen2660.com](http://www.allen2660.com)还不能快速迁移出来，知识点还需要梳理。再加上这个站点还不完善，我还有很多坑需要踩。
+我没有使用独立域名，原来的博客[allen2660.com](http://www.allen2660.com)还不能快速迁移出来，知识点还需要梳理。再加上这个站点还不完善，还有很多坑需要踩。
 
 
 
