--- a/_posts/notes/2014-06-07-new-blog.md
+++ b/_posts/notes/2014-06-07-new-blog.md
@@ -8,7 +8,7 @@ title:  这是我的新博客
 关于为什么写博客的文章，读过好几篇了，下面几篇都写得很好：
 
 + [我为什么写博客](http://www.cnblogs.com/bangerlee/archive/2011/09/11/2173632.html)
-+ [BeiYuu-我为什么写博客？]()
++ [BeiYuu-我为什么写博客？](http://beiyuu.com/why-blog/)
 + [[BetterExplained]为什么你应该（从现在开始就）写博客](http://mindhacks.cn/2009/02/15/why-you-should-start-blogging-now/)
 
 ## 为什么来到GitHub
